@startuml
title Module example_pkg.models
skinparam classAttributeIconSize 0
skinparam classFontStyle bold
hide empty members
class Order {
    + id : int
    + user : User
    + items : List[OrderItem]
    + status : str
    + created_at : datetime
    --
    + add_item(product: Product, quantity: int) : OrderItem
    + total_amount() : float
    + set_status(new_status: str) : None
}
note top of Order
  Commande - Association et composition.
end note
class OrderItem {
    + product : Product
    + quantity : int
    --
    + total() : float
}
note top of OrderItem
  Ligne de commande - Composition avec Product.
end note
class PremiumUser {
    + membership_level : str
    + bonus_points : int
    # _vip_code : str
    --
    + __init__(id: int, email: str, name: str, membership_level: str)
    + add_points(points: int) : None
    + get_discount() : float
}
note top of PremiumUser
  Utilisateur premium avec avantages.
end note
class Product {
    + id : int
    + name : str
    + price : float
    + stock : int
    + description : Optional[str]
    --
    + is_available() : bool
    + apply_discount(percent: float) : float
}
note top of Product
  Représente un produit.
end note
class User {
    + id : int
    + email : str
    + name : str
    + created_at : datetime
    # _password_hash : str
    --
    + greet() : str
    # _validate() : bool
    + is_active() : bool
}
note top of User
  Utilisateur de base.
end note
User <|-- PremiumUser
OrderItem *-- Product : product
Order *-- User : user
Order o-- OrderItem : items
Order ..> Product : add_item param
Order ..> OrderItem : add_item return
@enduml